# cadpp

./: README.md  exon.toml  mise.toml
android/: .gitignore  build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  cadpp_android_main.cpp
android/app/src/main/kotlin/io/github/misut/cadpp/: MainActivity.kt
android/app/src/main/res/values/: themes.xml
native/: exon.toml
native/src/: main.cpp
src/: android_entry.cpp  app.cpp  app.hpp  fonts.cpp  fonts.hpp  geom.hpp  main.cpp  parser.cpp  parser.hpp  renderer.cpp  renderer.hpp
tools/android/: _env.sh  apk.sh  clean.sh  doctor.sh  emu_start.sh  emu_stop.sh  install.sh  launch.sh  logs.sh  run.sh  screencap.sh  stop.sh
